--- a/app/src/main/res/layout/activity_new_event_page.xml
+++ b/app/src/main/res/layout/activity_new_event_page.xml
@@ -72,5 +72,6 @@
         android:layout_weight="1"
         android:text="Delete"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
